// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`registry should find a route via exact matching: / 1`] = `
{
  "matchType": "exact",
  "pathPattern": "/",
  "route": {
    "method": "GET",
    "pathPattern": "/",
    "response": "hi",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should find a route via exact matching: /lorem/ipsum 1`] = `
{
  "matchType": "exact",
  "pathPattern": "/lorem/ipsum",
  "route": {
    "method": "POST",
    "pathPattern": "/lorem/ipsum",
    "response": "dolor sit amet",
    "status": 201,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should fall back to default scope: /fallback 1`] = `
{
  "matchType": "exact",
  "pathPattern": "/fallback",
  "route": {
    "method": "GET",
    "pathPattern": "/fallback",
    "response": "fallback",
    "status": 200,
  },
  "scope": "[DEFAULT]",
}
`;

exports[`registry should fall back to ALL method: /catch-all 1`] = `
{
  "matchType": "exact",
  "pathPattern": "/catch-all",
  "route": {
    "method": "ALL",
    "pathPattern": "/catch-all",
    "response": "I got you covered!",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should fall back to ALL method of default scope: /catch-all 1`] = `
{
  "matchType": "exact",
  "pathPattern": "/catch-all",
  "route": {
    "method": "ALL",
    "pathPattern": "/catch-all",
    "response": "I got you covered!",
    "status": 200,
  },
  "scope": "[DEFAULT]",
}
`;

exports[`registry should find a route via pattern matching: /users/777 1`] = `
{
  "matchType": "pattern",
  "pathPattern": "/users/*",
  "route": {
    "method": "GET",
    "pathPattern": "/users/*",
    "response": "any user",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should find a route via pattern matching: /users/12345 1`] = `
{
  "matchType": "exact",
  "pathPattern": "/users/12345",
  "route": {
    "method": "GET",
    "pathPattern": "/users/12345",
    "response": "user 12345",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should find a route via pattern matching: /api/ 1`] = `
{
  "matchType": "pattern",
  "pathPattern": "/api/**",
  "route": {
    "method": "GET",
    "pathPattern": "/api/**",
    "response": "any api endpoint",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should find a route via pattern matching: /api/lorem 1`] = `
{
  "matchType": "pattern",
  "pathPattern": "/api/**",
  "route": {
    "method": "GET",
    "pathPattern": "/api/**",
    "response": "any api endpoint",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should find a route via pattern matching: /api/v1 1`] = `
{
  "matchType": "pattern",
  "pathPattern": "/api/**",
  "route": {
    "method": "GET",
    "pathPattern": "/api/**",
    "response": "any api endpoint",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should find a route via pattern matching: /api/v1/ 1`] = `
{
  "matchType": "pattern",
  "pathPattern": "/api/v1/**",
  "route": {
    "method": "GET",
    "pathPattern": "/api/v1/**",
    "response": "any v1 api endpoint",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should find a route via pattern matching: /api/v1/users 1`] = `
{
  "matchType": "pattern",
  "pathPattern": "/api/v1/**",
  "route": {
    "method": "GET",
    "pathPattern": "/api/v1/**",
    "response": "any v1 api endpoint",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should find a route via pattern matching: /api/v1/users/ 1`] = `
{
  "matchType": "pattern",
  "pathPattern": "/api/v1/**",
  "route": {
    "method": "GET",
    "pathPattern": "/api/v1/**",
    "response": "any v1 api endpoint",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should find a route via pattern matching: /api/v1/users/777 1`] = `
{
  "matchType": "pattern",
  "pathPattern": "/api/v1/users/*",
  "route": {
    "method": "GET",
    "pathPattern": "/api/v1/users/*",
    "response": "any v1 user",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should find a route via pattern matching with ALL method: /api/v1/users/777 1`] = `
{
  "matchType": "pattern",
  "pathPattern": "/api/**",
  "route": {
    "method": "ALL",
    "pathPattern": "/api/**",
    "response": "any api endpoint",
    "status": 200,
  },
  "scope": "ff71ae5d-3112-4321-a9e1-459f72a453c0",
}
`;

exports[`registry should find a route via pattern matching with ALL method of default scope: /api/v1/users/777 1`] = `
{
  "matchType": "pattern",
  "pathPattern": "/api/**",
  "route": {
    "method": "ALL",
    "pathPattern": "/api/**",
    "response": "any api endpoint",
    "status": 200,
  },
  "scope": "[DEFAULT]",
}
`;
